.provarCaches/00D6C0000000xA6UAI/objects/Class_Instructor__c.object
<CustomObject>
    <fields>
        <fullName>Class_Taught__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Class Taught</label>
        <referenceTo>Free_Class__c</referenceTo>
        <relationshipLabel>Class Instructors</relationshipLabel>
        <relationshipName>Class_Instructors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <formula>TEXT( Class_Taught__r.Course_Name__c )</formula>
        <label>Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instructor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Class Instructors</relationshipLabel>
        <relationshipName>Class_Instructors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Class Instructor</label>
    <nameField>
        <displayFormat>CI - {00000000}</displayFormat>
        <label>CI ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Instructors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>